# portfolio

./: Cargo.toml  Dioxus.toml  README.md
docs/: index.html  main.css  main.js
docs/assets/dioxus/: portfolio.js  portfolio_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
src/: main.rs
src/projects/: mod.rs
src/terminal/: buffer.rs  filesystem.rs  history.rs  mod.rs
src/terminal/commands/: cd.rs  clear.rs  help.rs  history.rs  ls.rs  mod.rs  pwd.rs  theme.rs
src/ui/: mod.rs
src/ui/components/: mod.rs  prompt.rs
src/ui/themes/: color.rs  mod.rs
