[package]
name = "portfolio"
version = "0.1.0"
authors = ["Aurelio Buonomo <auribuo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
clap = { version = "4.5.4", features = ["derive"] }
